<?xml version="1.0" encoding="utf-8"?>

<liveapps.it.billsplitter.models.NotFocusingScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/label_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_bill_hint_total"
                android:textAllCaps="true"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editText_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/super_bill_hint_total"
                android:inputType="numberDecimal"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/super_bill_hint_tip"
                android:textAllCaps="true"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editText_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/super_bill_hint_tip"
                android:inputType="numberDecimal"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/super_bill_hint_persons"
                android:textAllCaps="true"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editText_persons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/super_bill_hint_persons"
                android:inputType="number"
                android:textColor="@color/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/layTop"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@mipmap/ic_equal_white_48dp" />

        <LinearLayout
            android:id="@+id/layBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layTop"
            android:layout_marginTop="8dp"
            android:background="#fff"
            android:elevation="4dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|start"
                    android:paddingBottom="8dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="2dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/super_bill_total"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_total_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end"
                    android:paddingBottom="8dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="2dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="2dp"
                    android:paddingTop="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_total_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|start"
                    android:paddingBottom="8dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="2dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/super_bill_total_person"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_total_person_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end"
                    android:paddingBottom="8dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="2dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="2dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_tip_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|start"
                    android:paddingBottom="8dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="2dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/super_bill_total_tip"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_tip_total_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end"
                    android:paddingBottom="8dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="2dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="2dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_tip_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|start"
                    android:paddingBottom="8dp"
                    android:paddingEnd="2dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="2dp"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/super_bill_total_tip_person"
                    android:textAllCaps="false"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_tip_person_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|end"
                    android:paddingBottom="8dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingLeft="2dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingStart="2dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</liveapps.it.billsplitter.models.NotFocusingScrollView>